<resources>
    <!-- MAIN -->
    <string name="app_name">Todolist LF</string>
    <string name="tittle">TODOLIST LF</string>
    <string name="projects">Projects</string>
    <string name="tasks">Tasks</string>
    <string name="banner_ad_unit_id">ca-app-pub-2967694527472150/9479092021</string>
    <!-- PROJECTS -->
    <string name="newproject">New Project</string>
    <string name="projectname">Project Name</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_low">Low</string>
    <string name="send">Send</string>
    <string name="setdate">Set Date</string>
    <string name="deadlinedate">None</string>
    <string name="projectsaved">Project Saved</string>
    <!-- TASKS -->
    <string name="newtask">New Task</string>
    <string name="taskname">Task Name</string>
    <string name="tasknote">Note</string>
    <string name="percentage">Percentage</string>
    <string name="tasksaved">Task Saved</string>
    <!-- DIALOG -->
    <string name="delete_p_title">Delete Project</string>
    <string name="delete_p_msg">Are you sure you want to delete this project and all its tasks?</string>
    <string name="delete_p_ok">Project Deleted</string>
    <string name="delete_t_title">Delete Task</string>
    <string name="delete_t_msg">Are you sure you want to delete this task?</string>
    <string name="delete_t_ok">Task Deleted</string>
    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="ordertask">Order Tasks by:</string>
    <string name="orderproject">Order Projects by:</string>
    <string name="s_latest">Latest</string>
    <string name="s_priority">Priority</string>
    <string name="s_name">Name</string>
    <string name="s_percentage">Percentage</string>
    <string name="s_saved">Settings Saved</string>
    <string name="b_save">Save</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_puta_mierda">Pues eso</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_newproject">NewprojectActivity</string>
    <string name="title_activity_new_task">newTaskActivity</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_task">editTaskActivity</string>
    <string name="title_activity_edit_project">editProjectActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
