<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.antoniolf.todolistlf.editProjectActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_margin="0dp"
        android:background="@color/blue"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:id="@+id/ib_home"
            android:src="@drawable/b_home"
            android:background="@null"
            android:onClick="goHome" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tittle"
            android:id="@+id/txt_title"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20dp"
            android:textColor="@color/clear"
            android:elegantTextHeight="true" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/b_sendep" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/b_sendep" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/projectname"
                android:id="@+id/tv_pname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/linearLayout" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_projname"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:inputType="text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/priority"
                android:id="@+id/tv_projname"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_projname"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:id="@+id/radioGroup2"
                android:gravity="center_vertical|center_horizontal" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_low"
                    android:id="@+id/rb_low" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_normal"
                    android:id="@+id/rb_normal"
                    android:checked="false"
                    android:layout_marginLeft="35dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_high"
                    android:id="@+id/rb_high"
                    android:layout_marginLeft="35dp" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/deadline"
                android:id="@+id/textView5"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/rg_priority"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout2"
                android:gravity="center_vertical|center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/deadlinedate"
                    android:id="@+id/tv_date"
                    android:layout_marginLeft="15dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setdate"
                    android:id="@+id/b_date"
                    android:layout_below="@+id/textView5"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/gradient"
                    android:layout_marginLeft="15dp"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/b_sendep"
        android:background="@drawable/gradient"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendEditProject" />

</RelativeLayout>
