<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.antoniolf.todolistlf.MainActivity"
    android:background="@drawable/gradient"
    android:id="@+id/mainlayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_margin="0dp"
        android:background="@color/blue"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:id="@+id/ib_home"
            android:src="@drawable/b_settings"
            android:background="@null"
            android:onClick="goSettings" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tittle"
            android:id="@+id/txt_title"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="35dp"
            android:textColor="@color/clear"
            android:elegantTextHeight="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout"
        android:weightSum="1"
        android:layout_above="@+id/adView">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/projects"
        android:id="@+id/txt_projects"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textSize="27dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="349dp"
        android:id="@+id/lv_projects"
        android:layout_below="@+id/txt_projects"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:divider="@color/clear"
        android:dividerHeight="2px"
        android:layout_weight="0.57" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newproject"
        android:id="@+id/b_newproject"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient"
        android:onClick="goNewproject" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>


